--- a/cicom-app/components/categories/categories.view.html
+++ b/cicom-app/components/categories/categories.view.html
@@ -1,5 +1,36 @@
 <div ng-include src="'sidenav.html'" ng-controller="SideNavController as sidenav">
 </div>
-<div class="views" id="myApp">
-    <p> categories on </p>
+<div class="categoryView" id="myApp">
+    <div class="categoryPanel">
+        <h1 class="titlePage">Tonos</h1>
+        <div class="framingList">
+            <select class="selectpicker" data-live-search="true" size="4" name="ngvalueselect" ng-model="categories.framingSelected" multiple>
+                <option ng-repeat="option in categories.framingArray" ng-value="option">{{option.name}}</option>
+            </select>
+        </div>
+        <div class="crudFraming">
+            <input type="text" ng-model="categories.framingSelected[0].name"/>
+            <div class="crudButtons">
+                <i class="fa fa-times" id="cancelButton" aria-hidden="true"></i>
+                <i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i>
+                <i class="fa fa-check" id="saveButton" aria-hidden="true"></i>
+            </div>
+        </div>
+    </div>
+    <div class="categoryPanel">
+        <h1 class="titlePage">Medios</h1>
+        <div class="framingList">
+            <select class="selectpicker" data-live-search="true" size="4" name="ngvalueselected" ng-model="categories.newsSelected" multiple>
+                <option ng-repeat="option in categories.newsArray" ng-value="option">{{option.name}}</option>
+            </select>
+        </div>
+        <div class="crudFraming">
+            <input type="text" ng-model="categories.newsSelected.name"/>
+            <div class="crudButtons">
+                <i class="fa fa-times" id="cancelButton" aria-hidden="true"></i>
+                <i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i>
+                <i class="fa fa-check" id="saveButton" aria-hidden="true"></i>
+            </div>
+        </div>
+    </div>
 </div>
