--- a/cicom-app/components/candidates/candidates.view.html
+++ b/cicom-app/components/candidates/candidates.view.html
@@ -1,6 +1,264 @@
 <div ng-include src="'sidenav.html'" ng-controller="SideNavController as sidenav">
 </div>
 <div class="views" id="myApp" > 
-<p> cobs biancks </p>
+    <div class="newsTable" ng-hide="news.selectedNews">
+            <div class="titlePage">
+                <h1>Publicaciones por Candidatos</h1>
+            </div>
+            <div class="newsSearch">
+                <h2 >Candidato</h2>
+                <select class="form-control" name="singleSelect" ng-model="news.searchNews"
+                ng-options="option.name as option.name for option in news.media" ng-value="option.name" ></select>
+            </div> 
+            <table class="table table-striped table-hover table-bordered table-responsive" >
+                    <thead class="header">
+                        <tr class="firstRow">
+                            <form>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-addon"><i class="fa fa-search"></i></div>
+                                        <input type="text" class="form-control" placeholder="Filtrar..." ng-model="news.searchNews">
+                                    </div>      
+                                </div>                        
+                            </form>
+                        </tr>
+                        <tr class="firsts-th">
+                            <td>
+                                <p class="disabled" ng-click="news.sortType = 'Titulo'; news.sortReverse = !news.sortReverse">
+                                    Título 
+                                    <span ng-show="news.sortType == 'Titulo' && !news.sortReverse" class="fa fa-caret-down"></span>
+                                    <span ng-show="news.sortType == 'Titulo' && news.sortReverse" class="fa fa-caret-up"></span>
+                                <p>
+                            </td>
+                            <td>
+                                <p class="disabled" ng-click="news.sortType = 'Medio'; news.sortReverse = !news.sortReverse">
+                                    Candidato
+                                    <span ng-show="news.sortType == 'Medio' && !news.sortReverse" class="fa fa-caret-down"></span>
+                                    <span ng-show="news.sortType == 'Medio' && news.sortReverse" class="fa fa-caret-up"></span>
+                                </p>
+                            </td>
+                            <td>
+                                <p class="disabled" ng-click="news.sortType = 'FechaTS'; news.sortReverse = !news.sortReverse">
+                                    Fecha 
+                                    <span ng-show="news.sortType == 'FechaTS' && !news.sortReverse" class="fa fa-caret-down"></span>
+                                    <span ng-show="news.sortType == 'FechaTS' && news.sortReverse" class="fa fa-caret-up"></span>
+                                </p>
+                            </td>
+                            <td>
+                                <p class="disabled"  ng-click="news.sortType = 'Genero'; news.sortReverse = !news.sortReverse">
+                                    Género
+                                    <span ng-show="news.sortType == 'Genero' && !news.sortReverse" class="fa fa-caret-down"></span>
+                                    <span ng-show="news.sortType == 'Genero' && news.sortReverse" class="fa fa-caret-up"></span>
+                                </p>
+                            </td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr dir-paginate="n in news.newsArray | orderBy:news.sortType:news.sortReverse| filter:news.searchNews| itemsPerPage:5" ng-click="news.selectNews(n)">
+                            <th >{{n.Titulo}}</th>
+                            <td >{{n.Medio}}</td>
+                            <td >{{n.Fecha}}</td>
+                            <td >{{n.Genero}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <dir-pagination-controls
+                max-size="5"
+                direction-links="true"
+                boundary-links="true" >
+                </dir-pagination-controls>
+                <button class="btn btn-success" id="downloadButton" type="button" ng-csv="news.newsArray" filename="Noticias.csv">CSV</button>                                    
+        </div>
+        <div class="newsForm" ng-show="news.selectedNews">
+            <div class="linkButtons">
+                <a ng-href="{{news.news.Link}}" target="_blank" class="btn btn-warning" id="linkButton">Link</a>
+                <a ng-href="{{news.news.LinkFB}}" target="_blank" class="btn btn-primary" id="linkFB">Facebook</a>
+            </div>
+            <div class="firstCol">
+                <div class="entry">
+                    <h2 class="newsTitle">Título</h2><br/>
+                    <textarea class="form-control" rows='3' contenteditable='true' ng-model="news.news.Titulo" ></textarea>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Fecha de Publicación</h2><br/>
+                    <input type="date" datetime="yyyy-MM-dd HH:mm:ss" ng-model="news.news.FechaTS"/>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Medio</h2><br/>
+                    <select class="form-control" name="singleSelect" ng-model="news.news.Medio"
+                    ng-options="option.name as option.name for option in news.media" ng-value="option.name" ></select>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Texto en Facebook</h2><br/>
+                    <textarea class="form-control" rows='3' contenteditable='true' ng-model="news.news.TextoFB" ></textarea>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Tema</h2><br/>
+                    <select name="singleSelect" ng-model="news.news.Tema"
+                    ng-options="subject.name as subject.name for subject in news.subjects" ng-value="subject.name" ></select>
+                </div>
+                <div class="entryCheckbox">
+                    <input type="checkbox" ng-checked="news.news.CampanaE" name="ossm">
+                    <label for="ossm">Campaña</label>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Fecha</h2><br/>
+                    <input type="text" ng-model="news.news.Fecha"/>
+                </div>
+            </div>
+            <div class="secondCol">
+                <div class="entry">
+                    <div class="entryDivision">
+                        <h2>Formato</h2><br/>
+                        <select name="singleSelect" ng-model="news.news.Formato">
+                            <option value="">-- seleccionar formato --</option>
+                            <option value="link">Link</option>
+                            <option value="photo">Foto</option>
+                            <option value="video">Video</option>
+                        </select>
+                    </div>
+                    <div class="entryDivision">
+                            <h2 class="newsTitle">Interés</h2><br/>
+                            <select name="singleSelect" ng-model="news.news.Interes">
+                                <option value="">-- seleccionar interés --</option>
+                                <option value="Público">Público</option>
+                                <option value="No Público">No Público</option>
+                            </select>
+                    </div>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Framing/Tono</h2><br/>
+                    <select name="singleSelect" ng-model="news.news.Framing">
+                            <option value="">-- seleccionar tono --</option>
+                            <option value="Polémico">Polémico</option>
+                            <option value="Personal">Personal</option>
+                            <option value="Informativo">Informativo</option>
+                            <option value="Denuncia">Denuncia</option>
+                            <option value="Invitación">Invitación</option>
+                        </select>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Fuente</h2><br/>
+                    <input type="text" ng-model="news.news.Fuente"/>
+                </div>
+                <div class="entry">
+                    <div class="entryDivision">
+                        <h2>Género</h2><br/>
+                        <select name="singleSelect" ng-model="news.news.Genero">
+                            <option value="">-- seleccionar Género --</option>
+                            <option value="Noticia">Noticia</option>
+                            <option value="Opinión">Opinión</option>
+                            <option value="Editorial">Editorial</option>
+                            <option value="Entrevista">Entrevista</option>
+                            <option value="Blog">Blog</option>
+                        </select>
+                    </div>
+                    <div class="entryDivision">
+                        <h2 class="newsTitle">Sección</h2><br/>
+                        <input type="text" ng-model="news.news.Seccion"/>
+                    </div>
+                </div>
+                <div class="entry">
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">    
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/Like.png" alt="like">
+                                    <input id="numberCount" type="number" ng-model="news.news.Likes"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">    
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/comments.png" alt="like">
+                                    <input id="numberCount" type="number" ng-model="news.news.Comentarios"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">    
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/share.png" alt="like">
+                                    <input id="numberCount" type="number" ng-model="news.news.Shares"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/love-emoticon.png">
+                                    <input id="numberCount" type="number" ng-model="news.news.Love"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/wow.png">
+                                    <input id="numberCount" type="number" ng-model="news.news.Wow"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/haha.png">
+                                    <input id="numberCount" type="number" ng-model="news.news.Haha"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">
+                                <div class="table-cell">
+                                    <img class="iconImage" id="iconSad" src="../../images/sad.png">
+                                    <input id="numberCount" type="number" ng-model="news.news.Sad"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/angry.png">
+                                    <input id="numberCount" type="number" ng-model="news.news.Angry"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="content">
+                            <div class="table">
+                                <div class="table-cell">
+                                    <img class="iconImage" src="../../images/engagement.png">
+                                    <input id="numberCount" type="number" ng-model="news.news.Engagement"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Comentarios</h2><br/>
+                    <textarea class="form-control" rows='3' contenteditable='true' ng-model="news.news.Observaciones" ></textarea>
+                </div>
+            </div>
+            <div class="controllerButtons">
+                <button class="btn btn-warning" id="returnButton" ng-click="news.return()">Cancelar</button>
+                <button class="btn btn-success" id="saveButton" ng-click="news.saveNews()">Guardar</button>
+            </div>
+        </div>
 </div>
 
