--- a/cicom-app/components/categories/categories.view.html
+++ b/cicom-app/components/categories/categories.view.html
@@ -11,25 +11,25 @@
         <div class="crudFraming">
             <input type="text" ng-model="categories.framingSelected[0].name"/>
             <div class="crudButtons">
-                <i class="fa fa-times" id="cancelButton" aria-hidden="true"></i>
-                <i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i>
-                <i class="fa fa-check" id="saveButton" aria-hidden="true"></i>
+                <button class="noStyle" ng-click="categories.cancelFraming()"><i class="fa fa-times" id="cancelButton" aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.deleteFraming()"><i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.saveFraming()"><i class="fa fa-check" id="saveButton" aria-hidden="true"></i></button>
             </div>
         </div>
     </div>
     <div class="categoryPanel">
-        <h1 class="titlePage">Medios</h1>
+        <h1 class="titlePage">Candidatos</h1>
         <div class="framingList">
-            <select class="selectpicker" data-live-search="true" size="4" name="ngvalueselected" ng-model="categories.newsSelected" multiple>
-                <option ng-repeat="option in categories.newsArray" ng-value="option">{{option.name}}</option>
+            <select class="selectpicker" data-live-search="true" size="4" name="ngvalueselected" ng-model="categories.candidateSelected" multiple>
+                <option ng-repeat="option in categories.candidateArray" ng-value="option">{{option.name}}</option>
             </select>
         </div>
         <div class="crudFraming">
-            <input type="text" ng-model="categories.newsSelected.name"/>
+            <input type="text" ng-model="categories.candidateSelected[0].name"/>
             <div class="crudButtons">
-                <i class="fa fa-times" id="cancelButton" aria-hidden="true"></i>
-                <i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i>
-                <i class="fa fa-check" id="saveButton" aria-hidden="true"></i>
+                <button class="noStyle" ng-click="categories.cancelCandidate()"><i class="fa fa-times" id="cancelButton" aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.deleteCandidate()"><i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.saveCandidate()"><i class="fa fa-check" id="saveButton" aria-hidden="true"></i></button>  
             </div>
         </div>
     </div>
