--- a/cicom-app/css/style.css
+++ b/cicom-app/css/style.css
@@ -349,10 +349,23 @@ a.disabled, a.disabled span {
 .crudButtons i{
     display: inline-block;
     border-radius: 60px;
-    box-shadow: 0px 0px 2px #888;
+    box-shadow: 0px 0px 2px rgb(83, 83, 83);
     padding: 0.5em 0.6em;
 }
 
+.crudButtons i:active{
+    box-shadow: 0px 0px 0.5px #888;
+}
+
+.noStyle {
+    background: none !important;
+    color: inherit;
+    border: none;
+    padding: 0! important;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit !important;
+}
 
 
 
