platform working with python backend, TODO: update news and retrieve comments

--- a/cicom-app/components/login/login.view.html
+++ b/cicom-app/components/login/login.view.html
@@ -2,7 +2,7 @@
     <form class="loginForm">
         <div class="loginTitleContainer">
             <i class="fa fa-universal-access" aria-hidden="true"></i>
-            <h3 class="sideNavTitle loginTitle">cms cicom</h3>
+            <h3 class="sideNavTitle loginTitle">MEDIATIC CMS</h3>
         </div>
         <div class="inputsContainer">
             <label class="emailTitle">Email</label>
