--- a/cicom-app/components/categories/categories.view.html
+++ b/cicom-app/components/categories/categories.view.html
@@ -2,7 +2,7 @@
 </div>
 <div class="categoryView" id="myApp">
     <div class="categoryPanel">
-        <h1 class="titlePage">Tonos</h1>
+        <h1 class="titlePage">Temas</h1>
         <div class="framingList">
             <select class="selectpicker" data-live-search="true" size="4" name="ngvalueselect" ng-model="categories.framingSelected" multiple>
                 <option ng-repeat="option in categories.framingArray" ng-value="option">{{option.name}}</option>
@@ -11,12 +11,13 @@
         <div class="crudFraming">
             <input type="text" ng-model="categories.framingSelected[0].name"/>
             <div class="crudButtons">
-                <button class="noStyle" ng-click="categories.cancelFraming()"><i class="fa fa-times" id="cancelButton" aria-hidden="true"></i></button>
-                <button class="noStyle" ng-click="categories.deleteFraming()"><i class="fa fa-trash" id="deleteButton" aria-hidden="true"></i></button>
-                <button class="noStyle" ng-click="categories.saveFraming()"><i class="fa fa-check" id="saveButton" aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.cancelFraming()"><i class="fa fa-times" title="cancelar" id="cancelButton"  aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.deleteFraming()"><i class="fa fa-trash" id="deleteButton" title="borrar" aria-hidden="true"></i></button>
+                <button class="noStyle" ng-click="categories.saveFraming()"><i class="fa fa-check" id="saveButton" title="guardar" aria-hidden="true"></i></button>
             </div>
         </div>
     </div>
+    <!--
     <div class="categoryPanel">
         <h1 class="titlePage">Candidatos</h1>
         <div class="framingList">
@@ -33,4 +34,5 @@
             </div>
         </div>
     </div>
+    -->
 </div>
