Create and update users left, log activity left. New changes pending

--- a/cicom-app/components/news/news.view.html
+++ b/cicom-app/components/news/news.view.html
@@ -1,5 +1,5 @@
 <div ng-include src="'sidenav.html'" ng-controller="SideNavController as sidenav">
-</div>
+</div> 
 <div class="views" id="myApp">
     <div class="newsTable" ng-hide="news.selectedNews">
         <div class="titlePage">
@@ -76,7 +76,7 @@
         direction-links="true"
         boundary-links="true" >
         </dir-pagination-controls>
-        <button class="btn btn-success" id="downloadButton" type="button" ng-csv="news.newsArray" csv-header="news.keysArray" filename="Noticias.csv" >CSV</button>                                    
+        <button class="btn btn-success" id="downloadButton" type="button" ng-csv="news.filteredData" csv-header="news.keysArray" filename="Noticias.csv" >CSV</button>                                    
     </div>
     <div class="newsForm" ng-show="news.selectedNews">
         <div class="linkButtons">
