--- a/cicom-app/css/style.css
+++ b/cicom-app/css/style.css
@@ -159,11 +159,11 @@ button:focus {
     
 }
 
-.newsTable, .newsForm{
+.newsTable, .newsForm, .userTable, .userForm{
     margin:5% 5%;
 }
 
-.newsTable .header{
+.newsTable .header, .userTable .header{
     background-color:#283E56;
     color:#FFDE25; 
     cursor:pointer; 
@@ -185,7 +185,7 @@ a.disabled, a.disabled span {
     width: 40%;
     margin: 2% 5% 7.5% 2.5%;
     display: block;
-    padding:0%;
+    padding:2%;
 }
 
 .entryCheckbox{
@@ -215,7 +215,7 @@ a.disabled, a.disabled span {
 }
 
 .entry h2{
-    margin-top: 5%;
+    margin-top: 10%;
     margin-bottom:1%;
     font-size: 16px;
     font-weight: 600;
@@ -323,6 +323,10 @@ a.disabled, a.disabled span {
     display:inline;
     width:5%;
     padding: 0% 1.5%;
+}
+
+#usersTitle{
+    margin: 25px 0px;
 }
 
 .titlePage{
