--- a/cicom-app/components/news/news.view.html
+++ b/cicom-app/components/news/news.view.html
@@ -20,6 +20,7 @@
             <col width="50">
             <col width="50">
             <col width="50">
+            <col width="50">
             <thead class="header">
                 <tr class="firstRow">
                     <form>
@@ -60,6 +61,13 @@
                             <span ng-show="news.sortType == 'engagement' && news.sortReverse" class="fa fa-caret-up"></span>
                         </p>
                     </td>
+                    <td>
+                        <p class="disabled"  ng-click="news.sortType = 'subject'; news.sortReverse = !news.sortReverse">
+                            Tema
+                            <span ng-show="news.sortType == 'subject' && !news.sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="news.sortType == 'subject' && news.sortReverse" class="fa fa-caret-up"></span>
+                        </p>
+                    </td>
                 </tr>
             </thead>
             <tbody>
@@ -68,6 +76,7 @@
                     <td >{{n.from}}</td>
                     <td >{{n.created_time|date:'medium'}}</td>
                     <td >{{n.engagement}}</td>
+                    <td >{{n.subject}}</td>
                 </tr>
             </tbody>
         </table>
@@ -187,10 +196,11 @@
         <div class="postComments">
             <h2 class="newsTitle">Comentarios</h2>
             <table class="table table-striped table-hover table-bordered table-responsive" >
+                <col width="10">
                 <col width="100">
                 <col width="50">
                 <col width="50">
-                <col width="50">
+                <col width="40">
                 <thead class="header">
                     <tr class="firstRow">
                         <form>
@@ -203,6 +213,11 @@
                         </form>
                     </tr>
                     <tr class="firsts-th">
+                        <td>
+                            <button type="button" ng-click="news.expandAll(allExpanded = !allExpanded)">
+                                <span ng-bind="allExpanded ? '-' : '+'"></span>
+                            </button>
+                        </td>
                         <td>
                             <p class="disabled" ng-click="news.commentSortType = 'message'; news.commentSortReverse = !news.commentSortReverse">
                                 Comentario 
@@ -234,12 +249,41 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr dir-paginate="n in news.news.commentArray | orderBy:news.commentSortType:news.commentSortReverse| filter:news.searchComments| itemsPerPage:5">
-                        <th >{{n.message}}</th>
+                    <tr dir-paginate-start="n in news.news.commentArray | orderBy:news.commentSortType:news.commentSortReverse| filter:news.searchComments| itemsPerPage:5">
+                        <td>
+                            <button ng-click="expanded = !expanded" expand>
+                                <span ng-bind="expanded ? '-' : '+'"></span>
+                            </button>
+                        </td>
+                        <td >{{n.message}}</td>
                         <td >{{n.like_count}}</td>
                         <td >{{n.created_time|date:'medium'}}</td>
                         <td >{{n.comment_count}}</td>
                     </tr>
+                    <tr dir-paginate-end ng-show="expanded">
+                            <td></td>
+                            <td colspan="6">
+                                <table class="table table-condensed table-bordered">
+                                        <col width="100">
+                                        <col width="50">
+                                        <col width="50">
+                                    <thead>
+                                        <tr>
+                                            <th>Comentario Respuesta</th>
+                                            <th>Fecha</th>
+                                            <th>Likes</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="commentR in n.comments.data | orderBy:created_time">
+                                            <td>{{commentR.message}}</td>
+                                            <td>{{commentR.created_time|date:'medium'}}</td>
+                                            <td>{{commentR.like_count}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
                 </tbody>
             </table>
             <dir-pagination-controls
