--- a/cicom-app/components/users/user.view.html
+++ b/cicom-app/components/users/user.view.html
@@ -1,27 +1,16 @@
 <div ng-include src="'sidenav.html'" ng-controller="SideNavController as sidenav">
 </div>
 <div class="views" id="myApp">
-    <div class="userTable" ng-hide="users.userSelected">
+    <div class="userTable" ng-hide="users.userSelected || !users.userAccess" >
         <div class="titlePage">
             <h1 id="usersTitle">Usuarios del sistema</h1>
+            <button class="btn btn-success" id="createButton" ng-click="users.createUser()">Crear Usuario</button>
         </div>
-        <!--
-        <div class="newsSearch">
-            <h2 >Medio</h2>
-            <select class="form-control" name="singleSelect" ng-model="user.mediaSelected"
-            ng-options="option.facebook_name as option.name for option in users.media" ng-value="option.facebook_name" ></select>
-            <h2 >Fecha de inicio</h2>
-            <input class="borderbox"type="date" datetime="yyyy-MM-dd HH:mm:ss" ng-model="users.sinceDate"/>
-            <h2 >Fecha final</h2>
-            <input class="borderbox" type="date" datetime="yyyy-MM-dd HH:mm:ss" ng-model="users.untilDate"/>
-            <button class="btn btn-primary" type="button" ng-click="users.findNews()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>   
-        </div>
-        -->
         <table class="table table-striped table-hover table-bordered table-responsive" >
             <col width="100">
-            <col width="50">
-            <col width="50">
-            <col width="50">
+            <col width="100">
+            <col width="25">
+            <col width="25">
             <thead class="header">
                 <tr class="firstRow">
                     <form>
@@ -80,40 +69,66 @@
         </dir-pagination-controls>
     </div>
     <div class="userForm" ng-show="users.userSelected">
-        <div class="firstCol">
-            <div class="entry">
-                <h2 class="newsTitle">Nombre</h2><br/>
-                <input type="text" class="form-control" ng-model="users.user.fname"/>
+        <form name="userForm">
+            <div class="titlePage">
+                <h1>Información del Usuario</h1>
             </div>
-            <div class="entry">
-                <h2 class="newsTitle">Apellidos</h2><br/>
-                <input type="text" class="form-control" ng-model="users.user.lname"/>
+            <div class="firstCol">
+                <div class="entry">
+                    <h2 class="newsTitle">Nombre</h2><br/>
+                    <input type="text" class="form-control" ng-model="users.user.fname"/>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Apellidos</h2><br/>
+                    <input type="text" class="form-control" ng-model="users.user.lname"/>
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Email</h2><br/>
+                    <input type="email" class="form-control" name="email" ng-model="users.user.email" ng-readonly="!users.isCreating" required />
+                </div>
             </div>
-            <div class="entry">
-                <h2 class="newsTitle">Email</h2><br/>
-                <input type="text" class="form-control" name="media" ng-model="users.user.email" readonly/>
+            <div class="secondCol">
+                <div class="entry">
+                    <div class="entry" ng-hide="!users.isCreating">
+                        <h2 class="newsTitle">Password</h2><br/>
+                        <input ng-attr-type="{{ users.showPassword? 'text' : 'password' }}"  class="form-control" name="password" ng-model="users.user.password" ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" required/>
+                        <span class="warn" ng-show="!userForm.password.$error.required &&  userForm.password.$error.pattern && userForm.password.$dirty"> Debe de contener una letra minúscula, una mayúscula y un número o símbolo. </span>
+                    </div>
+                </div>
+                <div class="entryCheckbox" ng-hide="!users.isCreating">
+                    <input type="checkbox" ng-model="users.showPassword" ng-checked="false" name="showP">
+                    <label for="showP">Mostrar contraseña</label>
+                </div>
+                <div class="entry" ng-hide="!users.isCreating">
+                    <h2 class="newsTitle">Confirmar Password</h2><br/>
+                    <input type="password" class="form-control" name="confirmPassword" ng-model="users.confirmPass" ng-pattern="users.user.password" required/>
+                    <span class="warn" ng-show="users.user.password != users.confirmPass">Las contraseñas deben de coincidir.</span>
+                </div>
+    
+                <div class="entry" ng-hide="users.isCreating">
+                    <h2 class="newsTitle">Ultima actualización de datos</h2><br/>
+                    <label >{{users.user.modif_date|date:'medium'}}</label> 
+                </div>
+                <div class="entry" ng-hide="users.isCreating">
+                    <h2 class="newsTitle">Fecha de creación</h2><br/>
+                    <label >{{users.user.creation_date|date:'medium'}}</label> 
+                </div>
+                <div class="entry">
+                    <h2 class="newsTitle">Estado y permisos</h2>
+                </div>
+                <div class="entryCheckbox">
+                    <input type="checkbox" ng-model="users.user.status" name="active">
+                    <label for="active">Activo</label>
+                </div>
+                <div class="entryCheckbox">
+                    <input type="checkbox" ng-model="users.user.isAdmin" name="isAdmin">
+                    <label for="isAdmin">Administrador</label>
+                </div>
             </div>
-            <div class="entry">
-                <h2 class="newsTitle">Ultima actualización de datos</h2><br/>
-                <label >{{users.user.modif_date|date:'medium'}}</label> 
+            <div class="controllerButtons">
+                <button class="btn btn-warning" id="returnButton" ng-click="users.return()">Cancelar</button>
+                <button class="btn btn-success" id="saveButton" ng-show="(!userForm.$error.required && !userForm.confirmPassword.$error.pattern && !userForm.password.$error.pattern && !userForm.email.$error.email)|| !users.isCreating" ng-click="users.saveUser()">Guardar</button>
             </div>
-            <div class="entry">
-                <h2 class="newsTitle">Fecha de creación</h2><br/>
-                <label >{{users.user.creation_date|date:'medium'}}</label> 
-            </div>
-            <div class="entryCheckbox">
-                <input type="checkbox" ng-checked="users.user.status" name="active">
-                <label for="active">Activo</label>
-            </div>
-            <div class="entryCheckbox">
-                <input type="checkbox" ng-checked="users.user.isAdmin" name="isAdmin">
-                <label for="isAdmin">Administrador</label>
-            </div>
-        </div>
-        
-        <div class="controllerButtons">
-            <button class="btn btn-warning" id="returnButton" ng-click="users.return()">Cancelar</button>
-            <button class="btn btn-success" id="saveButton" ng-click="users.saveUser()">Guardar</button>
-        </div>
+        </form>
     </div>
 </div>  
