--- a/cicom-app/components/login/login.view.html
+++ b/cicom-app/components/login/login.view.html
@@ -11,7 +11,7 @@
         <div class="inputsContainer">
             <label class="passwordTitle">Password</label>
             <input type="password" placeholder="Password" ng-model="login.password"/>
-            <p ng-show="login.errorLogginIn">Username o password incorrect</p>
+            <p ng-show="login.errorLogginIn">Email o password incorrecto</p>
         </div>
         <div>
             <input type="submit" class="submitButton" value="Login" ng-click="login.login(login.email, login.password)">
